[Bug #20423] Disallow anonymous block within argument forwarding